# BSP

./: .clang-format  .clangd  .format  .gitignore  Commands  install.sh  px4_fmu-v5_default.px4  reqs.txt  start.sh
Printing/: bottom-new.stl  bottom.3mf  bottom.stl  top-hole.3mf  top-hole.stl  top-with-hole.stl  top.stl
Printing/Zohd Drift Walksnail V3 nano mount/: Antenna mount.stl  walksnail v3 nano mount.STEP  walksnail v3 nano mount.stl
accessories/: bmi-160.py  scan-i2c.py  scd30.py  smbus-test.py
data-extraction/: .python-version  lift-coefficients.ipynb
install/: local_setup.sh  setup.sh
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/msg/: Servo.msg  VehicleLocalPosition.msg  VehicleOdometry.msg
src/flight_movement_logger/: CMakeLists.txt  package.xml
src/flight_movement_logger/src/: movement_logger.cpp
src/glider/: CMakeLists.txt  package.xml
src/glider/src/: servo.cpp
src/gy87_reader/: CMakeLists.txt  package.xml
src/gy87_reader/src/: gy87_reader_node.cpp  mpu6050.cpp  mpu6050.h
src/servo_controller/: CMakeLists.txt  package.xml
src/servo_controller/src/: servo_control_node.cpp
src/servo_publisher/: CMakeLists.txt  package.xml
src/vrpn_mocap_px4/: CMakeLists.txt  README.md  package.xml
src/vrpn_mocap_px4/launch/: launch.yaml
src/vrpn_mocap_px4/src/: relay_pose.cpp
(+196 files in other folders)
